@@ -1,4 +1,6 @@
 == 0.8.0 Dodgy Dentist release
+ * List supported adapters in command usage.
+ * Add file adapter to built-in adapter, serve static files in current directory.
  * Allow disabling signal handling in Server with :signals => false
  * Make Server.new arguments more flexible, can now specify any of host, port, app or hash options.
  * Add --backend option to specified which backend to use, closes #55
